src/styles.css
/* You can add global styles to this file, and also import other style files */
body {
    padding: 0;
    margin: 0;
}
.snowfall-background {
    background-color: #343a40;; /* Example color, change as needed */
    position: relative;
    width: 100%;
    height: 100vh;
    overflow: hidden;
}

.snowflake {
    position: absolute;
    top: -10px;
    background: white;
    border-radius: 50%;
    opacity: 0.8;
    width: 10px;
    height: 10px;
    animation: fall linear infinite;
}
  
@keyframes fall {
    to {
      transform: translateY(100vh);
    }
}

